# sokoworld

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about-md.hbs  about.hbs  about.toml  build_wasm.sh  check.sh  deps.sh  level-format.txt  license.sh  licenses.html  licenses.md  qa.md  release.md  release_linux.sh  release_macos.sh  release_wasm.sh  serve_wasm.sh
.github/workflows/: checks.yml
assets/: level2.txt  level3.txt  level5.txt  level6.txt  pack-a.toml  yoshio-murase-automatic.toml
assets/packs/: pack-a.toml  yoshio-murase-automatic.toml
icons/: 16x16.rgba  32x32.rgba  64x64.rgba
src/: assets_path.rs  audio.rs  color.rs  consts.rs  context.rs  draw.rs  entity.rs  font.rs  fs.rs  input.rs  level.rs  lib.rs  main.rs  save.rs  scene.rs  settings.rs  text.rs  texture.rs  tile.rs  vec2.rs
src/level/: pack.rs  playable_level.rs
src/scene/: credits.rs  gameplay.rs  level_select.rs  main_menu.rs  pause.rs  settings.rs
tests/: pack_validator.rs
web/: index.html
