[package]
name = "sokoworld"
version = "0.2.0-dev"
edition = "2021"
description = "Classic box pushing puzzler Sokoban"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamepads = { version = "0.1.6", default-features = false }
# later versions use way more CPU on macOS, see
# https://github.com/not-fl3/miniquad/issues/470
macroquad = { version = "0.4", features=["audio"] }
quad-storage = "0.1.3"
serde = { version = "1.0.207", features=["serde_derive"] }
toml = "0.8.19"

[profile.dev.package.'*']
opt-level = 3

[package.metadata.bundle]
name = "SokoWorld"
identifier = "com.brettchalupa.sokoworld"
# icon = ["icon/32x32.png", "icon/128x128.png", "icon/128x128@2x.png"] # TODO
resources = ["assets"]
copyright = "Copyright (c) Brett Chalupa 2024. Public domain."
category = "Puzzle game"
